-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.1.0-beta1
-
None
-
Ubuntu Mate 16.04 x86_64
Commit ddefe062c73e35def585f8fc6c90a4f18e47c0f4 seems to brake the android deplyoment. The "Android build SDK" is not populated anymore and the "Run" opens up the device selection dialog, which shortly crashes. The previous commit 1a248b1b932e2c7c42e25993d921e78c52aa4bcf works just fine.
I'm using Android SDK 24.4.1 & NDK 11c, which are located like:
~/.android/android-sdk-linux
~/.android/android-ndk-r11c
and the Qt-5.7 compiled with above SDK & NDK is under:
~/.android/Qt-5.7
| For Gerrit Dashboard: QTCREATORBUG-16280 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 159731,3 | Fixed the issue where Android build SDK was not populated anymore | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |