Fixed the issue where Android build SDK was not populated anymore

Task-number: QTCREATORBUG-16280
Change-Id: I35e174e8c9dca2475e2c7c8c858c17ad7e6141f1
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>